--- a/index.html
+++ b/index.html
@@ -3,20 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Example</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>My Awesome Website</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
 <body>
     <header>
-        <h1>JavaScript Integration Example</h1>
+        <h1>Welcome to My Awesome Website</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <p>Click the button to see a message:</p>
-        <button id="myButton">Click Me!</button>
-        <p id="message"></p>
+        <section id="home">
+            <h2>Home</h2>
+            <p>This is the home section of the website.</p>
+            <button id="myButton">Click Me!</button>
+            <p id="message"></p>
+        </section>
+        <section id="about">
+            <h2>About</h2>
+            <p>This section contains information about the website.</p>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Feel free to reach out through our contact form.</p>
+        </section>
     </main>
     <footer>
-        <p>&copy; 2023 My Website</p>
+        <p>&copy; 2023 My Awesome Website</p>
     </footer>
     <script src="Layout.js"></script>
 </body>
